--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       
 </div>
 <div class="image-cover">
-  <div class="image"><img src="images/hyy.jpg" alt=""></div>
+  <div class="image"><img src="images/profile.jpg" alt=""></div>
   <div class="background"></div>
 </div>
     </section>
