--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
            <div class="image-content">
             <h2>Iqraaa Rajpoot</h2>
             <h5>Website Designer</h5>
-              <img src="images/hyy.jpg" alt="">
+              <img src="images/profile.jpg" alt="">
           </div>
         </div>
 
