--- a/Resume.html
+++ b/Resume.html
@@ -243,7 +243,7 @@ width: 0;
                &nbsp; &nbsp; &nbsp; &nbsp;
                &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
               
-                <a href="profile.html"><button class="btn">Back</button> </a>
+                <a href="portfolio.html"><button class="btn">Back</button> </a>
           
     </div>
   </div>
